tests/invalid/Void_Invalid_2.whiley
function f(int x, void z) :
    return
